--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,56 @@
 body{
     display:flex;
+    flex-direction: column;
+    background-color:rgb(63, 63, 100);
+    font-family:Roboto, sans-serif;
+}
+#header{
+    align-self:center;
+    margin-bottom:5px;
+    display:flex;
+    justify-content: center;
+    font-size: 48px;
+    background:grey;
+    width:50%;
+}
+#content{
+    display:flex;
+    justify-content:space-evenly;
+    border:5px teal solid;
+    
+    
 }
 #canvas{
     background-color:blue;
     border:5px red solid;
     height: 500px;
     width: 500px;
-    justify-self: center; 
     display:flex;
     flex-wrap:wrap;
+    justify-self: center;
+    align-self:center;
 }
-#menu{
+button{
+    height:50px;
+}
+.menu{
+    display:flex;
+    flex-direction: column;
+    justify-content: space-between;
     background-color: black;
     border:5px green solid;
     height: 600px;
     width: 300px;
-    margin-right:50px;
+    color:white;
+    text-align:center;
+    font-size:24px;
+    font-family:Roboto, sans-serif;
+}
+#menu1{
+    
+}
+#menu2{
+
 }
 .pixel{
     /* min-width: 10px;
